test/fails/bad_functions/naming.lgl
uniform float[3][3] x;

int f(int x) {
    return x;
}

void main() {
    print(f(1));
    return;
}
